아이템 명 변경 (ITEM > 아이템)

--- a/venice.html
+++ b/venice.html
@@ -41,9 +41,9 @@
 		</div>
 		<div id="info">
 			<ol>
-				<li>ITEM1 : 5초 동안 정지</li>
-				<li>ITEM2 : 속도 감소</li>
-				<li>ITEM3 : 단어 초기화</li>
+				<li>아이템1 : 5초 동안 정지</li>
+				<li>아이템2 : 속도 감소</li>
+				<li>아이템3 : 단어 초기화</li>
 			</ol>
 		</div>
 	</div>
