change user UI (score, fail, level)

--- a/venice.html
+++ b/venice.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ko">
 <head>
 	<meta charset="utf-8">
@@ -64,13 +64,13 @@
 		<label for="answer">
 		<input id="answer" type="text"></label><br/>
 
-		<a>SCORE: </a>
+		<a>성공: </a>
 		<a id="score"></a><br/>
 
-		<a>FAIL: </a>
+		<a>실패: </a>
 		<a id="fail"></a><br/>
 
-		<a>LEVEL: </a>
+		<a>레벨: </a>
 		<a id="level"></a><br/>
 
 		<button id="start">START GAME</button>
