change success name (성공 > success)

--- a/venice.html
+++ b/venice.html
@@ -64,7 +64,7 @@
 		<label for="answer">
 		<input id="answer" type="text"></label><br/>
 
-		<a>성공: </a>
+		<a>success: </a>
 		<a id="score"></a><br/>
 
 		<a>실패: </a>
