change UI (ANSWER > answer)

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 	<!--사용자에게 보여줄 부분-->
 	<div class="user">
-		<label for="answer">ANSWER
+		<label for="answer">answer
 		<input id="answer" type="text"></label><br/>
 
 		<a>score: </a>
