--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 		</div>
 		<div id="info">
 			<ol>
-				<li>ITEM1 : 5초 동안 정지</li>
-				<li>ITEM2 : 속도 감소</li>
-				<li>ITEM3 : 단어 초기화</li>
+				<li>item1 : 5초 동안 정지</li>
+				<li>item2 : 속도 감소</li>
+				<li>item3 : 단어 초기화</li>
 			</ol>
 		</div>
 	</div>
