--- a/venice.html
+++ b/venice.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
 	<meta charset="utf-8">
-	<title>devops-venice</title>
+	<title>venice</title>
 	<link rel="stylesheet" type="text/css" href="venice.css">
 	<script type="text/javascript" src="jquery.js"></script>
 	<script type="text/javascript" src="venice_controller.js"></script>
